# lrc-editor

./: 01 Fake Your Death.lrc  Cargo.toml  coding-style.md  fix_state.py  index.html  prompt.md  styles.css  summary.md
.github/workflows/: release.yml
src/: domain.rs  lib.rs  main.rs  web_app.rs
src/domain/: document.rs  entry.rs  metadata.rs  parser.rs  selection.rs  time.rs
src/web_app/: actions.rs  app.rs  audio.rs  indexed_db.rs
src/web_app/actions/: mod.rs  models.rs  reducer.rs  types.rs
src/web_app/components/: mod.rs  preview_panel.rs  source_panel.rs  timeline_panel.rs
src/web_app/components/timeline/: lyric_chunk.rs  mod.rs  playback_controls.rs  timeline_lanes.rs  track_pads.rs  waveform_canvas.rs
src/web_app/components/timeline/hooks/: file_handlers.rs  mod.rs  playback_sync.rs  zoom_handlers.rs
src/web_app/editor/: timeline.rs
